[package]
name = "esp-embassy-wifihelper"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Simple helper library to make it easier to connect to wifi with esp-embassy"
homepage = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
repository = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["esp32", "wifi", "embassy"]

[dependencies]
log = { version = "0.4.21" }
static_cell = { version = "2.0", features = ["nightly"] }
heapless = "0.8.0"

# dependencies for ESP
esp-hal = { version = "0.23.1", default-features = false }
esp-hal-embassy = { version = "0.6.0" }
esp-wifi = { version = "0.12.0", features = ["log", "wifi", "utils"] }

# dependencies for embassy
embassy-executor = { version = "0.7.0", features = ["log"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.6.1"
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
    "proto-ipv4",
] }
esp-wifi-sys = { version = "0.7.1", default-features = false, optional = true }

[dev-dependencies]
embassy-futures = "0.1.1"

esp-println = { version = "0.13.1", default-features = false, features = [
    "log",
] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
[features]
esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-wifi/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-hal-embassy/esp32c2", "esp-wifi/esp32c2"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-wifi/esp32c3",
    "dep:esp-wifi-sys",
    "esp-wifi-sys/esp32c3",
]
esp32c6 = ["esp-hal/esp32c6", "esp-hal-embassy/esp32c6", "esp-wifi/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-hal-embassy/esp32h2", "esp-wifi/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-wifi/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-wifi/esp32s3"]

esp32example = [
    "esp32",
    "embassy-executor/executor-thread",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-println/uart",
]
esp32c2example = [
    "esp32c2",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-println/uart",
]
esp32c3example = [
    "esp32c3",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-println/uart",
]
esp32c6example = [
    "esp32c6",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-println/jtag-serial",
]
esp32h2example = [
    "esp32h2",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
    "esp-println/jtag-serial",
]
esp32s2example = [
    "esp32s2",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-println/uart",
]
esp32s3example = [
    "esp32s3",
    "embassy-executor/executor-thread",
    "embassy-executor/task-arena-size-32768",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-println/jtag-serial",
]

[[example]]
name = "wifi_example"

[[example]]
name = "wifi_connect_later_example"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
