[package]
name = "esp-embassy-wifihelper"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Simple helper library to make it easier to connect to wifi with esp-embassy"
homepage = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
repository = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["esp32", "wifi", "embassy"]

[dependencies]
heapless = "0.9"
cfg-if = "1.0.0"
log = { version = "0.4.21", optional = true}
defmt = { version = "1.0.1", optional = true}

# dependencies for ESP
esp-hal = { version = "1.0.0-rc.0", default-features = false }
esp-hal-embassy = { version = "^0.9" }
esp-wifi = { version = "0.15", features = ["wifi"] }
esp-alloc = { version = "0.8" }

# dependencies for embassy
embassy-executor = "0.7"
embassy-time = { version = "0.4", features = ["generic-queue-8"] }
embassy-sync = "0.7"
embassy-net = { version = "0.6", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
] }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
    "proto-ipv4",
] }
esp-wifi-sys = { version = "0.7", default-features = false, optional = true }

embedded-io-async = "0.6.1"

[dev-dependencies]
embassy-futures = "0.1.1"
esp-bootloader-esp-idf = "0.2.0"

esp-println = { version = "0.15", default-features = false, features = ["auto"] }

esp-backtrace = { version = "0.17", features = [
    "exception-handler",
    "panic-handler",
] }

[features]
espexample = [
    "esp-hal/unstable",
    "esp-hal/rt",
    "embassy-executor/executor-thread",
    "embassy-executor/task-arena-size-32768",
]

log = [
    "dep:log",
    "esp-println/log-04",
    "esp-backtrace/println",
]
defmt = [
    "dep:defmt",
    "esp-println/defmt-espflash",
    "esp-backtrace/defmt",
    "esp-wifi/defmt",
    "smoltcp/defmt",
]

esp32 = ["esp-hal/esp32", "esp-hal-embassy/esp32", "esp-wifi/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-hal-embassy/esp32c2", "esp-wifi/esp32c2"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-hal-embassy/esp32c3",
    "esp-wifi/esp32c3",
    "dep:esp-wifi-sys",
    "esp-wifi-sys/esp32c3",
]
esp32c6 = ["esp-hal/esp32c6", "esp-hal-embassy/esp32c6", "esp-wifi/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-hal-embassy/esp32h2", "esp-wifi/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-hal-embassy/esp32s2", "esp-wifi/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-wifi/esp32s3"]

esp32example = [
    "esp32",
    "espexample",
    "esp-bootloader-esp-idf/esp32",
    "esp-backtrace/esp32",
    "esp-println/esp32",
]
esp32c2example = [
    "esp32c2",
    "espexample",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
]
esp32c3example = [
    "esp32c3",
    "espexample",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
]
esp32c6example = [
    "esp32c6",
    "espexample",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
]
esp32h2example = [
    "esp32h2",
    "espexample",
    "esp-bootloader-esp-idf/esp32h2",
    "esp-backtrace/esp32h2",
    "esp-println/esp32h2",
]
esp32s2example = [
    "esp32s2",
    "espexample",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
]
esp32s3example = [
    "esp32s3",
    "espexample",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
]

[[example]]
name = "wifi_example"

[[example]]
name = "wifi_connect_later_example"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
