[package]
name = "esp-embassy-wifihelper"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Simple helper library to make it easier to connect to wifi with esp-embassy"
homepage = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
repository = "https://github.com/oyvindnetland/esp-embassy-wifihelper"
readme = "README.md"
categories = ["embedded", "no-std"]
keywords = ["esp32", "wifi", "embassy"]

[dependencies]
heapless = "0.9"
cfg-if = "1.0.0"

# logging dependencies, use feature log or defmt to enable
log = { version = "0.4.21", optional = true }
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1", optional = true }

# dependencies for ESP
esp-hal = { version = "1.0", features = ["unstable"] }
esp-rtos = { version = "0.2", features = ["embassy", "esp-radio"] }
esp-bootloader-esp-idf = "0.2"
esp-radio = { version = "0.17", features = ["wifi"] }
esp-alloc = { version = "0.9" }
esp-wifi-sys = { version = "0.8.1", default-features = false, optional = true }

# dependencies for embassy
embassy-executor = "0.9"
embassy-time = "0.5"
embassy-sync = "0.7"
embassy-net = { version = "0.6", features = [
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv4",
] }
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
    "proto-ipv4",
] }

[dev-dependencies]
esp-println = { version = "0.16", default-features = false, features = [
    "auto",
] }
esp-backtrace = { version = "0.18", features = ["panic-handler"] }

[features]
# features for log/defmt
log = [
    "dep:log",
    "esp-hal/log-04",
    "esp-rtos/log-04",
    "esp-backtrace/println",
    "esp-println/log-04",
    "esp-radio/log-04",
]
defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "esp-rtos/defmt",
    "esp-backtrace/defmt",
    "esp-println/defmt-espflash",
    "esp-radio/defmt",
    "smoltcp/defmt",
]

# features for different esp chips
esp32 = [
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-radio/esp32",
    "esp-bootloader-esp-idf/esp32",
]
esp32c2 = [
    "esp-hal/esp32c2",
    "esp-rtos/esp32c2",
    "esp-radio/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-rtos/esp32c3",
    "esp-radio/esp32c3",
    "dep:esp-wifi-sys",
    "esp-wifi-sys/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-radio/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]
esp32s2 = [
    "esp-hal/esp32s2",
    "esp-rtos/esp32s2",
    "esp-radio/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-radio/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
]

# features for running the examples in this crate on different esp chips
espexample = ["defmt", "esp-backtrace/panic-handler"]

esp32example = [
    "esp32",
    "espexample",
    "esp-backtrace/esp32",
    "esp-println/esp32",
]
esp32c2example = [
    "esp32c2",
    "espexample",
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
]
esp32c3example = [
    "esp32c3",
    "espexample",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
]
esp32c6example = [
    "esp32c6",
    "espexample",
    "dep:defmt-rtt",
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
]
esp32s2example = [
    "esp32s2",
    "espexample",
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
]
esp32s3example = [
    "esp32s3",
    "espexample",
    "dep:defmt-rtt",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
]

[[example]]
name = "wifi_example"

[[example]]
name = "wifi_connect_later_example"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
